# yoda-rs

./: .env  .gitignore  Cargo.toml  build.rs
account-service/: Cargo.toml
account-service/src/: lib.rs
atoms/: Cargo.toml
atoms/src/: delta.rs  lib.rs  pagination.rs  search.rs
auth/: Cargo.toml
auth/src/: lib.rs  role.rs
derive/: Cargo.toml
derive/src/: api.rs  atom.rs  data.rs  lib.rs  support.rs
derive/src/api/: mutate.rs  output.rs  query.rs  store.rs  update.rs
derive/src/data/attribute/: auth.rs
derive/src/test/: ty.rs
derive/tests/: test.rs
derive/tests/api/: basic_derive.rs
graphql/: schema.graphql
migrations/: 20210601163956_init.sql
model/: Cargo.toml
model/src/: account.rs  lib.rs  organization.rs  transaction.rs
org-service/: Cargo.toml
org-service/src/: lib.rs
schema/: Cargo.toml
schema/src/: lib.rs
src/: lib.rs  main.rs
store/: Cargo.toml
store/src/: lib.rs  sql.rs
