[package]
name = "account-service"
version = "0.1.0"
authors = ["Benjamin Cape <benjcape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.8.5", features = ["chrono"] }
chrono = "0.4.19"
auth = { path = "../auth" }
store = { path = "../store" }
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls"] }
serde = "1.0.126"
atoms = { path = "../atoms" }
derive = { path = "../derive" }
