[package]
name = "atoms"
version = "0.1.0"
authors = ["benjcape"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.8.6", features = ["chrono"] }
derive_more = "0.99.14"
serde = "1.0.126"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls", "chrono"] }
uuid = { version = "0.8.2", features = ["v4"] }
