[package]
name = "auth"
version = "0.1.0"
authors = ["benjcape"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
async-graphql = "2.8.5"
derive_more = "0.99.14"
jsonwebtoken = "7.2.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
reqwest = { version = "0.10.10", features = ["json"] }
rusoto_cognito_identity = "0.46.0"
serde = "1.0.126"
serde_json = "1.0.64"
syn = "1.0.73"
