[package]
name = "derive"
version = "0.1.0"
authors = ["Benjamin Cape <benjcape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.42"
atoms = { path = "../atoms" }
serde = "1.0.126"
heck = "0.3.3"
async-graphql = "2.9.2"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls"] }
auth = { path = "../auth" }
store = { path = "../store" }


[lib]
proc-macro = true
