[package]
name = "schema"
version = "0.1.0"
authors = ["Benjamin Cape <benjcape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
org-service = { path = "../org-service" }
async-graphql = "2.8.5"
account-service = { path = "../account-service" }