[package]
name = "store"
version = "0.1.0"
authors = ["benjcape"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "postgres", "json", "uuid", "chrono"] }
auth = { path = "../auth" }
atoms = { path = "../atoms" }